<resources>
    <string name="app_name">Helping Hands</string>
    <string name="version">helping hands (v_1.1)</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_requests">Requests</string>
    <string name="title_profile">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetching_data_from_database">Fetching data from the database…</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="someone_within_your_area_needs_your_help">Someone within your area needs your help</string>
    <string name="help_is_coming">Help is coming</string>
...
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="register_as_volunteer">Register as Volunteer</string>
    <string name="update_profile">Update profile</string>
    <string name="emergency_contact_1">Emergency Contact 1 :</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="emergency_contact_2">Emergency Contact 2 :</string>
    <string name="emergency_contact_3">Emergency Contact 3 :</string>
    <string name="save">Save</string>
...
