<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/baseline_place_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/requestsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_requests" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/title_profile" />
</menu>